make sure DJ stream does not text wrap

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -292,3 +292,7 @@ div#thermometer {
 #chat {
     max-width: 550px;
 }
+
+#dj-stream {
+    min-width:210px;
+}
